k8s/base/resources/fe/httpRoute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fe-http-route
  namespace: blog
spec:
  parentRefs:
    - name: blog-gateway
      sectionName: https
  hostnames:
    - "roshenrumy.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fe-service
          port: 3000
